--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>My Little Planet</title>
-</head>
-<body>
-	
-	<h1>My Little Planet</h1>
-	
-</body>
-</html>
+---
+layout: default
+---
+
+<h1>My Little Planet</h1>
+<p>only me</p>
