--- a/news.html
+++ b/news.html
@@ -3,3 +3,12 @@ layout: default
 ---
 
 <h1>News</h1>
+
+<ul>
+	{% for news in site.posts %}
+	<li>
+		<a href="">{{news.title}}</a>
+		<p>{{news.meta}}</p>
+	</li>
+	{% endfor %}
+</ul>
